--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -21,8 +21,11 @@ footer {
   z-index: 1;
 }
 .footer1{
-  width: 380px;
-  background: #fff;
+  width: 383px;
+  background: #fff;;
+  margin:0;
+  height: 60px; 
+  padding: 0;
 }
 .footer2{
   margin-left: 400px;
@@ -31,6 +34,9 @@ footer {
   bottom: 0;
   right: 0;
   left: 0;
+}
+a{
+  text-decoration: none !important;
 }
 /*fonts*/
 
@@ -45,7 +51,8 @@ footer {
 @font-face {
   font-family: 'Roboto-Medium';
   src: url('fonts/Roboto-Medium.eot');
-  src: url('fonts/Roboto-Medium.woff') format('woff'), url('fonts/Roboto-Medium.ttf') format('truetype');
+  src: url('fonts/Roboto-Medium.woff') format('woff'),
+       url('fonts/Roboto-Medium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -53,7 +60,8 @@ footer {
 @font-face {
   font-family: 'Roboto-Light';
   src: url('fonts/Roboto-Light.eot');
-  src: url('fonts/Roboto-Light.woff') format('woff'), url('fonts/Roboto-Light.ttf') format('truetype');
+  src: url('fonts/Roboto-Light.woff') format('woff'), 
+       url('fonts/Roboto-Light.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -61,7 +69,15 @@ footer {
 @font-face {
   font-family: 'Roboto-Thin';
   src: url('fonts/Roboto-Thin.eot');
-  src: url('fonts/Roboto-Thin.woff') format('woff'), url('fonts/Roboto-Thin.ttf') format('truetype');
+  src: url('fonts/Roboto-Thin.woff') format('woff'), 
+       url('fonts/Roboto-Thin.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Roboto-Thin';
+  src: url('fonts/Roboto-Thin.woff') format('woff'),
+       url('fonts/Roboto-Thin.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -73,17 +89,44 @@ footer {
   bottom: 0;
   width: 400px;
   background-color: #fff;
-  display: table-row;
+  display: table-cell;
+  overflow: scroll !important;
   padding-top: 5px;
   border: none;
+  padding-bottom: 80px;
 }
 .shadow{
   box-shadow: 0px 0px 15px #000;
   z-index: 1;
 }
+.divCausas{
+  box-shadow: 0px 2px 15px rgb(107, 106, 106);
+  height: 250px;
+  margin: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.divCampus{
+  box-shadow: 0px 2px 15px rgb(107, 106, 106);
+  height: 250px;
+  margin: 10px;
+}
+.containerTab{
+  position: fixed;
+  top: 0;
+  background: red;
+}
+.fiLeTab{
+  height: 17.22% !important;
+  background: red;
+}
+/*align*/
 .vistas {
   margin-left: 400px;
   margin-top: 0px;
+  padding-bottom: 70px;
+  overflow-y: scroll;
+  overflow-x:  hidden;
 }
 .fAlign{
 padding-top: 15px;
@@ -95,12 +138,47 @@ padding-top: 15px;
 .alignMain{
   padding-left: 50px;
 }
+.p0 {
+  padding: 0px;
+}
+
+.ptb20 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.mtb20 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.p20 {
+  padding: 20px;
+}
+
+.pt20 {
+  padding-top: 20px;
+}
+
+.ptb5 {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.pt65 {
+  padding-top: 65px;
+}
+
+.m0 {
+  margin: 0;
+}
+
 /*Text*/
 .textFooter{
  font-family: 'Roboto-Medium';
 }
 .textNegrita{
-  font-family: 'Roboto-Light';
+  font-family: 'Roboto-Bold';
   letter-spacing: 3px;
 }
 .textMain{
@@ -113,6 +191,55 @@ padding-top: 15px;
  font-size: 65px;
  font-family: 'Roboto-Medium';
  color: #fff;
+}
+.textNav{
+  font-family: 'Roboto-Medium';
+  color: #a5a4a4;
+  font-size: 16px;
+}
+.textCausa{
+  color: #5f5e5e;
+  font-family: 'Roboto-Bold';
+}
+.textCausa1{
+  color: #5f5e5e;
+  font-family: 'Roboto-Bold';
+  font-size: 25px;
+}
+.textGris{
+  color: #918f8f;
+  font-family: 'Roboto-Medium';
+  font-size: 18px;
+}
+.textGris1{
+  color: #5f5e5e;
+  font-family: 'Roboto-Medium';
+  font-size: 20px;
+}
+.textGris2{
+  color: #918f8f;
+  font-family: 'Roboto-Medium';
+  font-size: 12px;
+}
+.textVercausa{
+  color: #5c5959;
+  font-family: 'Roboto-Thin';
+  font-size: 16px;
+}
+.textAzul{
+  color: #004880;
+  font-family: 'Roboto-Medium';
+  font-size: 40px;
+}
+.textH{
+  font-size: 13px;
+  color: #918f8f;
+  font-family: 'Roboto-Thin';
+}
+.textH1{
+  font-size: 13px;
+  color: #8d8c8c;
+  font-family: 'Roboto-Medium';
 }
 /*images*/
 
@@ -127,7 +254,23 @@ padding-top: 15px;
   bottom: 7px;
 }
 .imgLogo{
+  margin-top: 20px;
   padding: 30px;
+  }
+  .imgverCausa{
+    width: 50px;
+  }
+  .imgSocial1{
+   width: 35px;
+   text-decoration: none;
+  }
+  .imgCampus{
+    height: 150px;
+    width:100% ;
+  }
+  .imgPrincipal{
+    height: 350px;
+    width: 100%;
   }
   /*Background*/
   .backTec{
@@ -180,19 +323,100 @@ padding-top: 15px;
   padding: 10px 30px;
   border-radius: 15px;
   outline: 0 !important;
+  width: 70%;
 }
-.btnDona:hover , .btnDona:focus {
+.btnDona:hover ,.btnDona:focus  {
   background: #02589b;
   color: #fff;
   font-size: 30px;
   padding: 10px 30px;
   border-radius: 15px;
+  outline: 0 !important;
+  width: 70%;
+}
+.btnVer{
+  background: #004880;
+  color: #fff;
+  padding: 5px 30px;
+}
+.btnVer:hover ,.btnVer:focus{
+  background: #02589b;
+  color: #fff;
+  padding: 5px 30px;
+}
+.btnDona1{
+  background: #004880;
+  color: #fff;
+  font-size: 25px;
+  padding: 10px 30px;
+  border-radius: 15px;
+  outline: 0 !important;
+  width: 70%;
+  margin-top: 20px;
+}
+.btnDona1:hover , .btnDona1:focus{
+  background: #02589b;
+  color: #fff;
+  font-size: 25px;
+  padding: 10px 30px;
+  border-radius: 15px;
+  outline: 0 !important;
+  width: 70%;
+}
+.dropdown1{
+  min-width: 70%;
+}
+.dropdown-menu > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.42857143;
+  color: #999898;
+  white-space: nowrap;
+  font-family: 'Roboto-Thin';
+}
+.dropdown-menu > li > a:hover {
+  background: #24acd9;
+  color: #fff;
+}
+.btnDrop{
+    border-radius: 25px;
+    border: 1px solid #cbcbcb;
+    outline: 0px !important;
+    color: #cbcbcb;
+    font-size: 16px;
+    font-family: 'Roboto-Thin';
+}
+.btnDrop:hover ,.btnDrop:focus {
+  border-radius: 25px;
+  border: 1px solid #cbcbcb;
+  outline: 0px !important;
+  color: #cbcbcb;
+  font-size: 16px;
+  font-family: 'Roboto-Thin';
 }
 /*Nav*/
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+   border-color: transparent;
+}
+.navbar {
+  margin-bottom: 0px; 
+}
+.navbar-default .navbar-nav > li > a {
+  border-top: 1px solid  #a5a4a4;
+  font-family: 'Roboto-Thin';
+}
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+  background-color: #004880;
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: rgb(184, 183, 183);
+}
+/*nav Menu uno*/
 .navList{
   list-style: none;
-  padding: 0;
-  
+  padding: 15px;
 }
 .navList > li {
   border-top: 1px solid  #a5a4a4;
@@ -204,6 +428,14 @@ padding-top: 15px;
   font-size: 16px;
   color: #a5a4a4;
   text-decoration: none;
+  font-family: 'Roboto-Thin';
+}
+.navList > li > a:focus {
+  list-style: none;
+  font-size: 16px;
+  color:  #24acd9;
+  text-decoration: none;
+  font-family: 'Roboto-Medium';
 }
 .navListFooter{
   list-style: none;
@@ -219,7 +451,34 @@ padding-top: 15px;
   color: #a5a4a4;
   text-decoration: none;
 }
+.enlaces{
+ color:  #24acd9;
+ padding: 0px 15px;
+}
+.enlaces1{
+  color:  #24acd9;
+  font-family: 'Roboto-Medium';
+ }
 
+ .tabHerramientas{
+  list-style: none;
+  padding: 0;
+ }
+ .tabHerramientas > li  {
+  background: #fff;
+  padding: 10px 25px;
+}
+.tabHerramientas > li:hover , .tabHerramientas > li:focus{
+  background: #24acd9 !important;
+  padding: 10px 25px;
+}
+.tabHerramientas > li > a {
+  font-size: 13px;
+  color: #5c5959;
+}
+.tabHerramientas > li > a:hover {
+  color: #fff;
+}
 /*search*/
 .icon-addon {
   position: relative;
@@ -271,8 +530,18 @@ padding-top: 15px;
   top: 4px;
  color:#cbcbcb;
 }
+@media screen and (max-width: 1024px) {
+  .divCausas{
+    box-shadow: 0px 2px 15px rgb(107, 106, 106);
+    height: 200px;
+    margin: 5px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
 
 @media screen and (max-width: 768px) {
+  
   .vistas {
     margin-left: 0px;
   }
@@ -283,7 +552,7 @@ padding-top: 15px;
   }
    .footer2 {
     margin-left: 0px;
-    height: 100px;
+    height: 110px;
   }
   .fAlign{
     padding-top: 15px;
@@ -328,5 +597,40 @@ padding-top: 15px;
   font-family: 'Roboto-Thin';
   letter-spacing: 2px;
 }
+.imgLogo{
+  width: 200px;
+  padding: 10px;
+  margin: 0;
+}
+.btnDona{
+  background: #004880;
+  color: #fff !important;
+  font-size: 20px;
+  padding: 10px 30px;
+  border-radius: 15px;
+  outline: 0 !important;
+  width: 100%;
+}
+.navbar-default .navbar-nav > li > a {
+  border-top: 1px solid #a5a4a4;
+  font-family: 'Roboto-Thin';
+  font-size: 10px !important;
+}
+}
+@media screen and (max-width: 414px) {
+  .navbar-default .navbar-nav > li > a {
+    border-top: 1px solid #a5a4a4;
+    font-family: 'Roboto-Thin';
+    font-size: 16px !important;
+  }
+  .btnDona{
+    background: #004880;
+    color: #fff !important;
+    font-size: 20px;
+    padding: 10px 30px;
+    border-radius: 15px;
+    outline: 0 !important;
+    width: 60%;
+  }
 }
 
