--- a/app/views/campus.html
+++ b/app/views/campus.html
@@ -1,7 +1,7 @@
 <section class="container-fluid p20">
         <br>
         <div class="row text-center">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInUp data-wow-duration="1s" data-wow-delay="0s"">
                 <div class="divCampus">
                     <img src="images/campus/1T3F1696.jpeg" class="img-responsive center-block imgCampus" alt="">
                     <br>
@@ -9,7 +9,7 @@
                     <a href="#verCampus" class="btn btnVer">VER</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInUp data-wow-duration="1s" data-wow-delay=".5s"">
                 <div class="divCampus">
                     <img src="images/campus/3.jpg" class="img-responsive center-block imgCampus" alt="">
                     <br>
@@ -17,7 +17,7 @@
                     <a href="#verCampus" class="btn btnVer">VER</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInUp data-wow-duration="1s" data-wow-delay="1s"">
                 <div class="divCampus">
                     <img src="images/campus/16840893.jpg" class="img-responsive center-block imgCampus" alt="">
                     <br>
@@ -25,7 +25,7 @@
                     <a href="#verCampus" class="btn btnVer">VER</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInUp data-wow-duration="1s" data-wow-delay="1.5s"">
                 <div class="divCampus">
                     <img src="images/campus/Campus+TAM+1.jpeg" class="img-responsive center-block imgCampus" alt="">
                     <br>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="row text-center">
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 ">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInUp data-wow-duration="1s" data-wow-delay="2s"">
                     <div class="divCampus">
                         <img src="images/campus/69daa.jpg" class="img-responsive center-block imgCampus" alt="">
                         <br>
@@ -43,7 +43,7 @@
                         <a href="#verCampus" class="btn btnVer">VER</a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInUp data-wow-duration="01" data-wow-delay="2.5s"">
                     <div class="divCampus">
                         <img src="images/campus/14_img3.JPG" class="img-responsive center-block imgCampus" alt="">
                         <br>
@@ -51,7 +51,7 @@
                         <a href="#verCampus" class="btn btnVer">VER</a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInUp data-wow-duration="1s" data-wow-delay="3s"">
                     <div class="divCampus">
                         <img src="images/campus/9.jpg" class="img-responsive center-block imgCampus" alt="">
                         <br>
@@ -59,7 +59,7 @@
                         <a href="#verCampus" class="btn btnVer">VER</a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInUp data-wow-duration="1s" data-wow-delay="3.5s"">
                     <div class="divCampus">
                         <img src="images/campus/17.jpg" class="img-responsive center-block imgCampus" alt="">
                         <br>
