--- a/app/views/causa.html
+++ b/app/views/causa.html
@@ -1,28 +1,28 @@
 <section class="container-fluid p20">
     <br>
     <div class="row text-center">
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInRight data-wow-duration="2s" data-wow-delay="0s"">
             <div class="divCausas">
                 <img src="images/causas/causas-02.jpg" class="img-responsive center-block" alt="">
                 <br>
                 <a href="#verCausa" class="btn btnVer">VER</a>
             </div>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInRight data-wow-duration="2s" data-wow-delay=".5s"">
             <div class="divCausas">
                 <img src="images/causas/causas-03.jpg" class="img-responsive center-block" alt="">
                 <br>
                 <a href="#verCausa" class="btn btnVer">VER</a>
             </div>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInRight data-wow-duration="2s" data-wow-delay="1s"">
             <div class="divCausas">
                 <img src="images/causas/causas-08.jpg" class="img-responsive center-block" alt="">
                 <br>
                 <a href="#verCausa" class="btn btnVer">VER</a>
             </div>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInRight data-wow-duration="2s" data-wow-delay="1.5s"">
             <div class="divCausas">
                 <img src="images/causas/causas-07.jpg" class="img-responsive center-block" alt="">
                 <br>
@@ -31,28 +31,28 @@
         </div>
     </div>
     <div class="row text-center">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 ">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInRight data-wow-duration="2s" data-wow-delay="2s"">
                 <div class="divCausas">
                     <img src="images/causas/causas-01.jpg" class="img-responsive center-block" alt="">
                     <br>
                     <a href="#verCausa" class="btn btnVer">VER</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInRight data-wow-duration="2s" data-wow-delay="2.5s"">
                 <div class="divCausas">
                     <img src="images/causas/causas-04.jpg" class="img-responsive center-block" alt="">
                     <br>
                     <a href="#verCausa" class="btn btnVer">VER</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInRight data-wow-duration="2s" data-wow-delay="3s"">
                 <div class="divCausas">
                     <img src="images/causas/causas-05.jpg" class="img-responsive center-block" alt="">
                     <br>
                     <a href="#verCausa" class="btn btnVer">VER</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 wow fadeInRight data-wow-duration="2s" data-wow-delay="3.5s"">
                 <div class="divCausas">
                     <img src="images/causas/causas-06.jpg" class="img-responsive center-block" alt="">
                     <br>
