--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,16 +2,16 @@
     <div class="row backTec">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 backBlue">
           <div class="vcenter alignMain">
-            <h1 class="textTitle">Bienvenidos a</h1>
-            <h1 class="textTitle">donar.tec.mx</h1>
+            <h1 class="textTitle wow slideInLeft data-wow-duration="2s" data-wow-delay="0s"">Bienvenidos a</h1>
+            <h1 class="textTitle wow slideInLeft data-wow-duration="2s" data-wow-delay="1s"">donar.tec.mx</h1>
             <br>
-            <p class="textMain">¡Gracias¡ Por creer junto con nosostros en un mejor país a través del impulso
+            <p class="textMain wow fadeInLeft data-wow-duration="2s" data-wow-delay="2s"">¡Gracias¡ Por creer junto con nosostros en un mejor país a través del impulso
               <br>a la educación .Por cada peso que dones sorteos Tec aportará otro más </p>
             <br>
-            <button class="btn btnTec" type="submit">Buscar por
+            <button  ng-click="toCausa()"  class="btn btnTec wow fadeInUp data-wow-duration="2s" data-wow-delay="3s"" type="submit">Buscar por
               <span class="textNegrita">Causas</span>
             </button>
-            <button class="btn btnTec" type="submit">Buscar por
+            <button  ng-click="toCampus()" class="btn btnTec wow fadeInUp data-wow-duration="2s" data-wow-delay="3s"" type="submit">Buscar por
               <span class="textNegrita">Campus</span>
             </button>
           </div>
