--- a/app/views/herraminetasprocuracion.html
+++ b/app/views/herraminetasprocuracion.html
@@ -1,73 +1,155 @@
 <section class="container-fluid">
-    <p class="ptb20 textH">Para uso
+    <p class="p20 textH">Para uso
         <span class="textH1">exclusivo</span> de comunidad y amigos del
         <span class="textH1">TEC de Monterrey</span>.Si deseas contar con alguno de estos canales de procuración a
         <span class="textH1">donativos@servicios.itesm.mx</span>
     </p>
     <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 p0">
+        <div class="col-lg-4 col-md-4 col-sm-4 hidden-xs p0">
             <ul class="tabHerramientas">
-                <li ng-click="setTab(1)">
-                    <a href=""><strong>Productos con causa</strong>
+                <li ng-click="tabUnofn()">
+                    <a href="">
+                        <strong style="font-weight: 700 !important;">Productos con causa</strong>
                         <p class="ptb5 m0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                        <img src="images/herramientas/iconos plataformas-01.png" class="imgH1" alt="">
                     </a>
                 </li>
-                <li ng-click="setTab(2)">
+                <li ng-click="tabDosfn()">
                     <a href=""><strong>Carrera virtual</strong>
                         <p class="ptb5 m0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                        <img src="images/herramientas/iconos plataformas-02.png" class="imgH2" alt="">
                     </a>
                 </li>
-                <li ng-click="setTab(3)">
+                <li ng-click="tabTresfn()">
                     <a href=""><strong>Eventos con causa</strong>
                         <p class="ptb5 m0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                        <img src="images/herramientas/iconos plataformas-04.png" class="imgH3" alt="">
                     </a>
                 </li>
-                <li ng-click="setTab(4)">
+                <li ng-click="tabCuatrofn()">
                     <a href=""><strong>Crowfunding</strong>
                         <p class="ptb5 m0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                        <img src="images/herramientas/iconos plataformas-07.png" class="imgH4" alt="">
                     </a>
                 </li>
-                <li ng-click="setTab(5)">
+                <li ng-click="tabCincofn()">
                     <a href=""><strong>Dona ahora</strong>
                         <p class="ptb5 m0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                        <img src="images/herramientas/iconos plataformas-05.png" class="imgH5" alt="">
                     </a>
                 </li>
-                <li ng-click="setTab(6)">
+                <li ng-click="tabSeisfn()">
                     <a href=""><strong>Amigos 1 a 1</strong>
                         <p class="ptb5 m0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                        <img src="images/herramientas/iconos plataformas-06.png" class="imgH6" alt="">
                     </a>
                 </li>
-                <li ng-click="setTab(7)">
+                <li ng-click="tabSietefn()">
                     <a href=""><strong>Dona por teléfono</strong>
                         <p class="ptb5 m0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                        <img src="images/herramientas/iconos plataformas-03.png" class="imgH7" alt="">
                     </a>
                 </li>
                 
             </ul>
-
         </div>
-        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-            <div ng-show="isSet(1)">
+        <div class="col-lg-8 col-md-8 col-sm-8 hidden-xs p0">
+            <div ng-show="tabU">
                 <img src="images/herramientas/imgtab.png" class="img-responsive" alt="">
             </div>
-            <div ng-show="isSet(2)">
+            <div ng-show="tabD">
                 <img src="images/herramientas/imgtab1.png" class="img-responsive" alt="">
             </div>
-            <div ng-show="isSet(3)">
+            <div ng-show="tabT">
+                  
                 <img src="images/herramientas/imgtab2.png" class="img-responsive" alt="">
             </div>
-            <div ng-show="isSet(4)">
+            <div ng-show="tabCu">
+                  
                 <img src="images/herramientas/imgtab3.png" class="img-responsive" alt="">
             </div>
-            <div ng-show="isSet(5)">
-                <p>tab 5</p>
+            <div ng-show="tabCi">
+                 
+                    <img src="images/herramientas/imgtab.png" class="img-responsive" alt="">
             </div>
-            <div ng-show="isSet(6)">
-                <p>tab 6</p>
+            <div ng-show="tabSe">
+                    <img src="images/herramientas/imgtab1.png" class="img-responsive" alt="">
             </div>
-            <div ng-show="isSet(7)">
-                <p>tab 7</p>
+            <div ng-show="tabSi">
+                  
+                    <img src="images/herramientas/imgtab2.png" class="img-responsive" alt="">
             </div>
+        </div>
+        <div class="row visible-xs">   
+
+       <div class="text-center">
+            <div ng-click="tabUnofn()" class="TabH">
+                    <img src="images/herramientas/iconos plataformas-01.png" class="center-block imgTab" alt="">
+                </div>
+                <div ng-click="tabDosfn()" class="TabH">
+                        
+                    <img src="images/herramientas/iconos plataformas-02.png" class="center-block imgTab" alt="">
+                </div>
+                <div ng-click="tabTresfn()" class="TabH">
+                
+                    <img src="images/herramientas/iconos plataformas-04.png" class="center-block imgTab" alt="">
+                </div>
+                <div ng-click="tabCuatrofn()" class="TabH">
+                      
+                    <img src="images/herramientas/iconos plataformas-07.png" class="center-block imgTab" alt="">
+                </div>
+                <div ng-click="tabCincofn()" class="TabH">
+                       
+                    <img src="images/herramientas/iconos plataformas-05.png" class="center-block imgTab" alt="">
+                </div>
+                <div ng-click="tabSeisfn()" class="TabH">
+
+                 
+                    <img src="images/herramientas/iconos plataformas-06.png" class="center-block imgTab" alt="">
+                </div>
+                <div ng-click="tabSietefn()" class="TabH">
+                      
+                        <img src="images/herramientas/iconos plataformas-03.png" class="center-block imgTab" alt="">
+                    </div>
+       </div>
+
+            <div class="col-xs-12">
+                    <div ng-show="tabU">
+                            <p>Productos con causa</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                        <img src="images/herramientas/imgtab.png" class="img-responsive " alt="">
+                    </div>
+                    <div ng-show="tabD">
+                            <p>Carrera virtual</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                        <img src="images/herramientas/imgtab1.png" class="img-responsive" alt="">
+                    </div>
+                    <div ng-show="tabT">
+                            <p>Eventos con causa</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                        <img src="images/herramientas/imgtab2.png" class="img-responsive" alt="">
+                    </div>
+                    <div ng-show="tabCu">
+                            <p>Crowfunding</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                        <img src="images/herramientas/imgtab3.png" class="img-responsive" alt="">
+                    </div>
+                    <div ng-show="tabCi">
+                            <p>Dona ahora</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                            <img src="images/herramientas/imgtab.png" class="img-responsive" alt="">
+                    </div>
+                    <div ng-show="tabSe">
+                            <p>Amigos 1 a 1</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                            <img src="images/herramientas/imgtab1.png" class="img-responsive" alt="">
+                    </div>
+                    <div ng-show="tabSi">
+                            <p>Dona por teléfono</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam cupiditate quae dolorem.</p>
+                            <img src="images/herramientas/imgtab2.png" class="img-responsive" alt="">
+                    </div>
+                </div>
         </div>
     </div>
 
