--- a/app/views/reporteanual.html
+++ b/app/views/reporteanual.html
@@ -1,1 +1,10 @@
-<p>This is the reporteAnual view.</p>
+
+    <section class="container-fluid p30">
+          <div class="row text-center">
+          <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="embed-responsive embed-responsive-4by3">
+                  <iframe class="embed-responsive-item pdfH" title="PDF" src="images/reporte/pdfprueba.pdf" ></iframe>
+                </div>
+          </div>
+          </div>
+    </section>
